Fix view profile mobile layout overlapping sections

--- a/theme/custom.css
+++ b/theme/custom.css
@@ -678,6 +678,9 @@ ul.topiclist dt {
 	.group-title ~ p {
 		margin-left: 5px;
 	}
+	.column1,.column2 {
+		clear: both;
+	}
 }
 
 .postbody table {
